--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
       "2. None\n",
       "3. 1000\n",
       "4. Sorry, you do not have enough funds to withdrawal $1000 and maintain your minimum balance of $250\n",
-      "5. $100\n",
+      "5. $100. Your balance is now: $900\n",
       "6. Sorry, your maximum withdraw amount is 150\n",
       "7. Thank you for the deposit of $250. Your balance is now: $1150.0\n",
       "8. Thank you for the deposit of $2.5. Your balance is now: $1152.5\n",
@@ -188,6 +188,13 @@
     "class BankAccount():\n",
     "    \n",
     "    def set_balance(self, amount):\n",
+    "        if amount > 500000:\n",
+    "            print('high deposit warning!')\n",
+    "            answer = input('are you sure? y/n')\n",
+    "            if answer == 'y':\n",
+    "                self._balance += amount\n",
+    "            else:\n",
+    "                return None\n",
     "        self._balance += amount\n",
     "    \n",
     "    def get_balance(self):\n",
@@ -200,7 +207,7 @@
     "            return self.check_max_withdrawal(amount_requested)\n",
     "        else: \n",
     "            self.set_balance(-amount_requested)\n",
-    "            return f\"${amount_requested}\"\n",
+    "            return f\"${amount_requested}. Your balance is now: ${self._balance}\"\n",
     "            \n",
     "    def check_min_bal(self, amount_requested):\n",
     "        if ((self.get_balance() - amount_requested) > self._minimum_balance):\n",
@@ -244,6 +251,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "account_two.balance = 6000000"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -264,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,25 +288,9 @@
      "output_type": "stream",
      "text": [
       "GETTING BALANCE\n",
+      "GETTING BALANCE\n",
       "1. 0\n",
-      "SETTING BALANCE\n",
-      "2. None\n",
-      "GETTING BALANCE\n",
-      "3. 1000\n",
-      "GETTING BALANCE\n",
-      "GETTING BALANCE\n",
-      "4. Sorry, you do not have enough funds to withdrawal $1000 and maintain your minimum balance of $250\n",
-      "GETTING BALANCE\n",
-      "SETTING BALANCE\n",
-      "5. $100\n",
-      "GETTING BALANCE\n",
-      "6. Sorry, your maximum withdraw amount is 150\n",
-      "SETTING BALANCE\n",
-      "7. Thank you for the deposit of $250. Your balance is now: $1150.0\n",
-      "SETTING BALANCE\n",
-      "8. Thank you for the deposit of $2.5. Your balance is now: $1152.5\n",
-      "9. hello is not a number\n",
-      "10. {'_balance': 1152.5, '_minimum_balance': 250, '_max_withdrawal': 150}\n"
+      "10. {'_balance': 0, '_minimum_balance': 250, '_max_withdrawal': 150}\n"
      ]
     }
    ],
@@ -298,6 +298,7 @@
     "class BankAccount():\n",
     "    \n",
     "    def set_balance(self, amount):\n",
+    "        \n",
     "        print(\"SETTING BALANCE\")\n",
     "        self._balance += amount\n",
     "    \n",
@@ -313,7 +314,7 @@
     "        else: \n",
     "# ----------- NOTE THE CHANGE FROM self.set_balance(amount) TO self.balance = amount --------------- #\n",
     "            self.balance = -amount_requested\n",
-    "            return f\"${amount_requested}\"\n",
+    "            return f\"${amount_requested}. Your balance is now: ${self._balance}\"\n",
     "            \n",
     "    def check_min_bal(self, amount_requested):\n",
     "# ----------- NOTE THE CHANGE FROM self.get_balance() TO self.balance = --------------- #\n",
@@ -351,15 +352,16 @@
     "    return new_account\n",
     "\n",
     "account_three = make_account()\n",
+    "account_three.get_balance()\n",
     "print(\"1.\", account_three.get_balance())\n",
-    "print(\"2.\", account_three.set_balance(1000)) # returns None since assignment returns None\n",
-    "print(\"3.\", account_three.get_balance())\n",
-    "print(\"4.\", account_three.make_withdrawal(1000))\n",
-    "print(\"5.\", account_three.make_withdrawal(100))\n",
-    "print(\"6.\", account_three.make_withdrawal(300))\n",
-    "print(\"7.\", account_three.make_deposit(250))\n",
-    "print(\"8.\", account_three.make_deposit(2.50))\n",
-    "print(\"9.\", account_three.make_deposit(\"hello\"))\n",
+    "# print(\"2.\", account_three.set_balance(1000)) # returns None since assignment returns None\n",
+    "# print(\"3.\", account_three.get_balance())\n",
+    "# print(\"4.\", account_three.make_withdrawal(1000))\n",
+    "# print(\"5.\", account_three.make_withdrawal(100))\n",
+    "# print(\"6.\", account_three.make_withdrawal(300))\n",
+    "# print(\"7.\", account_three.make_deposit(250))\n",
+    "# print(\"8.\", account_three.make_deposit(2.50))\n",
+    "# print(\"9.\", account_three.make_deposit(\"hello\"))\n",
     "print(\"10.\", vars(account_three))"
    ]
   },
@@ -434,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
